Fix details spacing

--- a/src/css/weather.css
+++ b/src/css/weather.css
@@ -42,11 +42,12 @@ main {
 }
 
 #details-widget {
-	display: grid;
-	grid-template-columns: repeat(auto-fill, 150px);
-	justify-content: center;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
 	margin-top: 1rem;
-	row-gap: 1rem;
+	gap: 2rem;
+	justify-content: space-evenly;
 }
 
 .detail-element {
